namespace-turniere-backend.yml
apiVersion: v1
kind: Namespace
metadata:
  name: turniere-backend
  labels:
    name: turniere-backend
