grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.turnie.re
    http:
      paths:
      - path: /
        backend:
          serviceName: orange-possum-grafana
          servicePort: service
