prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: prometheus-ingress-secret
spec:
  rules:
  - host: prometheus.turnie.re
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operated
          servicePort: web
